Revert "Ensure global body allows horizontal scroll"
This reverts commit a5b37324a111b9f91a0674c204a8388ddb5d6aac.

--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -9,8 +9,7 @@
 html,
 body {
   max-width: 100vw;
-  overflow-x: visible;
-  overflow-y: auto;
+  overflow-x: hidden;
   font-family: $font-body;
   color: $black;
   background-color: $white;
